[fixed bug] home ke img was off-center. accidental 'w' typed, removed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4858,7 +4858,7 @@ header.site-header {
   position: relative;
 }
 .home-fw-slider.style-1 .item-image .caption-wrapper img {
-  margin-left: auto;w
+  margin-left: auto;
   margin-right: auto;
   opacity: 0.8;
   width: 400px;
